--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "timeago.js": "^4.0.2"
+    "timeago.js": "^4.0.2",
+    "twilio": "^4.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
